; ModuleID = '/home/carl/AnghaBench/i3/i3bar/src/extr_ipc.c_got_bar_config.c'
source_filename = "/home/carl/AnghaBench/i3/i3bar/src/extr_ipc.c_got_bar_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [26 x i8] c"Received bar config \22%s\22\0A\00", align 1
@I3_IPC_MESSAGE_TYPE_GET_OUTPUTS = common dso_local global i32 0, align 4
@config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@I3_IPC_MESSAGE_TYPE_GET_WORKSPACES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @got_bar_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @got_bar_config(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @DLOG(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %3)
  %5 = load i32, i32* @I3_IPC_MESSAGE_TYPE_GET_OUTPUTS, align 4
  %6 = call i32 @i3_send_msg(i32 %5, i32* null)
  %7 = call i32 @free_colors(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 1))
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @parse_config_json(i8* %8)
  %10 = call i32 (...) @subscribe_events()
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 3), align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %1
  %14 = load i32, i32* @I3_IPC_MESSAGE_TYPE_GET_WORKSPACES, align 4
  %15 = call i32 @i3_send_msg(i32 %14, i32* null)
  br label %16

16:                                               ; preds = %13, %1
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 2), align 4
  %18 = call i32 @init_xcb_late(i32 %17)
  %19 = call i32 @init_colors(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 1))
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 0), align 4
  %21 = call i32 @start_child(i32 %20)
  ret void
}

declare dso_local i32 @DLOG(i8*, i8*) #1

declare dso_local i32 @i3_send_msg(i32, i32*) #1

declare dso_local i32 @free_colors(i32*) #1

declare dso_local i32 @parse_config_json(i8*) #1

declare dso_local i32 @subscribe_events(...) #1

declare dso_local i32 @init_xcb_late(i32) #1

declare dso_local i32 @init_colors(i32*) #1

declare dso_local i32 @start_child(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
